# R1L-test

./: CMakeLists.txt
CpuComDaemon/: Android.bp  cpucomdaemon.rc  dumpcsv.sh  make_test_coverage_report.sh  make_test_result_report.sh  runtest.sh
CpuComDaemon/permissions/: cpucomdaemon.xml
CpuComDaemon/src/: CMakeLists.txt  CpuComDaemon.cpp  CpuComDaemon.h  CpuComDaemonLog.cpp  CpuComDaemonLog.h  DeviceConfigurations.cpp  DeviceConfigurations.h  main.cpp
CpuComDaemon/src/configure/: EmulatorSocketDevice.cpp  EmulatorSocketDevice.h  IEmulatorSocketDevice.h  IUARTDevice.h  UARTDevice.cpp  UARTDevice.h
CpuComDaemon/src/message/: CpuComMessageServer.cpp  CpuComMessageServer.h  IMessageServer.h
CpuComDaemon/src/vcpu/: CPU.cpp  CPU.h  CPUCommon.cpp  CPUCommon.h  ICPU.h  MultipleCPU.cpp  MultipleCPU.h
CpuComDaemon/src/vcpu/device/socket/: MasterDevice.cpp  MasterDevice.h  SlaveDevice.cpp  SlaveDevice.h
CpuComDaemon/src/vcpu/protocol/: Protocol.cpp  Protocol.h
CpuComDaemon/src/wrapper/: IMutexWrapper.h  MutexWrapper.cpp  MutexWrapper.h
CpuComDaemon/test/: CMakeLists.txt  CPUCommonTest.cpp  CpuComDaemonTest.cpp  ProtocolTest.cpp
CpuComDaemon/test/configure/: DeviceConfigureEmulatorSocketTest.cpp  DeviceConfigureUARTTest.cpp  MockIEmulatorSocketDevice.h  MockIUARTDevice.h
CpuComDaemon/test/message/: MockIMessageServer.h
CpuComDaemon/test/vcpu/: CPUTest.cpp  MockICPU.h  MultipleCPUTest.cpp
CpuComDaemon/test/vcpu/protocol/: MockProtocol.h
CpuComDaemon/test/wrapper/: MockMutexWrapper.h
CpuComDaemon/tools/: cpucomdaemon_csv_generator.cpp
CpuComService/: .gitignore  Android.bp  AndroidManifest.xml  build.gradle  jacoco.gradle  java-formatter.sh  make_test_coverage_report.sh  sonarqube.gradle
CpuComService/jni/: Android.bp  GlobalReference.h  cpu_com_service_jni.cpp  cpu_com_service_jni.h
CpuComService/permissions/: privapp-permissions-CpuComService.xml
CpuComService/res/values/: strings.xml
CpuComServiceManager/: Android.bp  AndroidManifest.xml  build.gradle  jacoco.gradle  java-formatter.sh  make_test_coverage_report.sh  runtest.sh  sonarqube.gradle  stub_defs
CpuComServiceManager/gradle/wrapper/: gradle-wrapper.properties
CpuComServiceManager/permissions/: com.mitsubishielectric.ahu.efw.lib.cpucomservice.xml
Internal/: Android.bp
Internal/include/: CpuComMessage.h  CpuCommand.h  Repeater.h
Internal/src/: Repeater.cpp
config/: cpucomm.mk
libCpuCom/: Android.bp  make_test_coverage_report.sh  make_test_result_report.sh  runtest.sh
libCpuCom/include/: CpuCom.h  libCpuCom.h
libCpuCom/include/mock/: mock_CpuCom.h
libCpuCom/src/: CpuComImpl.cpp  CpuComImpl.h  CpuComImpl_v2.cpp  CpuComImpl_v2.h  impl_CpuComImpl.h  libCpuCom.cpp
libCpuCom/src/common/: IIoDevice.h  IoDevice.cpp  IoDevice.h
libCpuCom/src/message/: CpuComMessenger.cpp  CpuComMessenger.h  IMessenger.h
libCpuCom/test/: libCpuComTest.cpp  libCpuComV2Test.cpp
libCpuCom/test/common/: MockIoDevice.h
libCpuCom/test/message/: MockIMessenger.h
libCpuCom/tools/libCpuComCsvGenerator/: dump_csv.sh  libcpucom_csv_generator.cpp
sepolicy/: cpucomdaemon.te  cpucomservice_app.te  file.te  file_contexts  installd.te  property.te  property_contexts  seapp_contexts  ueventd.te
tools/CpuComDaemonTestApp/: Android.bp  README  TestNative.cpp  TestNative.h  main.cpp
tools/CpuComServiceTestApp/: Android.bp  build.gradle
tools/CpuComServiceTestAppShell/: Android.bp  README.txt  build.gradle
tools/CpuComStabilityTestService/: Android.bp  AndroidManifest.xml  build.gradle  stabilitytest.sh
tools/VcpuEmulator/: Android.bp  README.txt  mcpu-config.json  vcpu-config.json  vcpuemulator.rc
tools/VcpuEmulator/sepolicy/: file.te  file_contexts  vcpuemulator.te
tools/VcpuEmulator/src/: Action.h  Actions.cpp  Actions.h  Emulator.cpp  Emulator.h  Events.cpp  (+13 more)
tools/libCpuComTestTool/: Android.bp  main.cpp
(+67 files in other folders)
